--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "he": "^1.2.0",
     "http": "^0.0.1-security",
     "jssoup": "^0.0.12",
+    "luxon": "^1.25.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "mongodb": "^3.6.3",
