--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.6.3",
     "node": "^15.4.0",
     "node-fetch": "^2.6.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "python-shell": "^3.0.0"
   }
 }
