--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "boca-chica-bot",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "spacebot",
+  "version": "2.0.0",
+  "description": "Collects data concerning spaceflight activities",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js"
+    "start-dev": "nodemon index.ts",
+    "start": "ts-node index",
+    "lint": "eslint --ext .ts ./"
   },
+  "author": "G. Michael Fitzgerald",
   "license": "MIT",
   "dependencies": {
-    "async-mutex": "^0.2.6",
-    "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "@types/express": "^4.17.13",
+    "axios": "^0.27.2",
+    "discord.js": "^13.8.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "he": "^1.2.0",
-    "http": "^0.0.1-security",
-    "jssoup": "^0.0.12",
-    "luxon": "^1.25.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
-    "mongodb": "^3.6.3",
-    "node": "^15.4.0",
-    "node-fetch": "^2.6.1",
-    "pug": "^3.0.0",
-    "python-shell": "^3.0.0"
+    "jssoup": "^0.0.15",
+    "luxon": "^3.0.1",
+    "mongodb": "^4.8.0",
+    "python-shell": "^3.0.1",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.12"
+  },
+  "engines": {
+    "node": ">=16.6.0"
   }
 }
