--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsdom": "^16.2.14",
     "axios": "^0.27.2",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "he": "^1.2.0",
-    "jssoup": "^0.0.15",
+    "jsdom": "^20.0.0",
     "luxon": "^3.0.1",
     "mongodb": "^4.8.0",
     "python-shell": "^3.0.1",
@@ -25,6 +26,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
