--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
     "target": "ES6",
     "moduleResolution": "Node16",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   }
 }
